Fix prb that thumbnail aligned left when resizing and aligning content photos

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -1,9 +1,11 @@
 
 /* Smaller image size and place in centre */
-/* Override basic !important */
 
-.post_inner img {
-  width: 80% !important;
+/* Override basic with !important
+Not select the thumbnail picture with not(.post_thumbnail)  */
+
+.post_inner img:not(.post_thumbnail) {
+  width: 70% !important;
   display: block !important;
   max-width: 1024px !important;
 }
